--- a/Sesi04_bisection.ipynb
+++ b/Sesi04_bisection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJx2LgclLCkNL/6eejkPoV",
+      "authorship_tag": "ABX9TyMMGYB+2EIN0f3UcbD9Mbyl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**SC-LAB 07/05/2024 BISECTION**"
+        "SC-LAB *07/05/2024*\n",
+        "\n",
+        ">  **BISECTION_04**\n",
+        "\n"
       ],
       "metadata": {
         "id": "GSUB9kpizkMt"
@@ -124,10 +127,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        " **Quiz 1 Bisection:** f(x)=x^3-3x^2+2x **->** [a,b] = [1,2],  tol = 0.01"
+        " f(x)=x^3-3x^2+2x **->** [a,b] = [1,2],  tol = 0.01"
       ],
       "metadata": {
         "id": "X3u0qL9N6z6d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "##  **Quiz 1 Bisection:**\n",
+        "\n",
+        "\n",
+        ">    f(x)=x^3 - 3x^2 + 2x\n",
+        "\n",
+        "> [a,b] = [1,2]\n",
+        "\n",
+        "> tol = 0.01\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QpgRJSqEhgAS"
       }
     },
     {
@@ -168,10 +195,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        " **Quiz 2 Bisection:** f(x) = sin(x) - x   **->**   [a,b] = [0,1],  tol = 0.001"
+        "\n",
+        "\n",
+        "\n",
+        "##  **Quiz 2 Bisection:**\n",
+        "\n",
+        "\n",
+        "> f(x) = sin(x) - x   \n",
+        "\n",
+        ">  [a,b] = [0,1]\n",
+        "\n",
+        "> tol = 0.001\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "y5596KpoAA9w"
+        "id": "6j03kJDCizI_"
       }
     },
     {
